# microbe-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/example1/: Main.cpp
include/: BackPropagation.h  BackPropagation.hpp  BiasNeuron.h  BiasNeuron.hpp  Connection.h  Connection.hpp  Function.h  InputLayer.h  InputLayer.hpp  InputNeuron.h  InputNeuron.hpp  Layer.h  Layer.hpp  LearningData.h  LearningSet.h  MultiLayerPerceptron.h  MultiLayerPerceptron.hpp  Network.h  Network.hpp  Neuron.h  Neuron.hpp  Normalizer.hpp  Sigmoid.h  Sigmoid.hpp  SmartLearningRate.h  SmartLearningRate.hpp  Tanh.h  Tanh.hpp  Teacher.h  Teacher.hpp  TeacherPlugin.h  TeacherPlugin.hpp
include/microbe/: BackPropagation.hpp  BiasNeuron.hpp  Connection.hpp  InputLayer.hpp  InputNeuron.hpp  Layer.hpp  MultiLayerPerceptron.hpp  Network.hpp  Neuron.hpp  Sigmoid.hpp  SmartLearningRate.hpp  Tanh.hpp  Teacher.hpp  TeacherPlugin.hpp  TeacherStatus.hpp
src/: BackPropagation.cpp  BiasNeuron.cpp  CMakeLists.txt  Connection.cpp  Function.cpp  InputLayer.cpp  InputNeuron.cpp  Layer.cpp  LearningData.cpp  LearningSet.cpp  MultiLayerPerceptron.cpp  Network.cpp  Neuron.cpp  Normalizer.cpp  Sigmoid.cpp  SmartLearningRate.cpp  Tanh.cpp  Teacher.cpp  TeacherPlugin.cpp  TeacherStatus.cpp
tests/: BiasNeuron.cpp  CMakeLists.txt  Connection.cpp  InputNeuron.cpp  Neuron.cpp  Normalizer.cpp  Sigmoid.cpp  Tanh.cpp
