add_library (
    microbe SHARED
    Function.cpp
    Sigmoid.cpp
    Tanh.cpp
    Neuron.cpp
    BiasNeuron.cpp
    InputNeuron.cpp
    Connection.cpp
    LearningData.cpp
    LearningSet.cpp
    Layer.cpp
    InputLayer.cpp
    Network.cpp
    MultiLayerPerceptron.cpp
    Teacher.cpp
    TeacherPlugin.cpp
    BackPropagation.cpp
)
